--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
