--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
