--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.0",
+    "@hono/zod-validator": "^0.2.2",
+    "hono": "^4.5.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
