--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.0",
-    "@hono/zod-validator": "^0.2.2",
     "drizzle-orm": "^0.33.0",
-    "hono": "^4.5.4",
-    "next": "14.2.5",
+    "next": "15.0.0-canary.111",
     "postgres": "^3.4.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.0.0-rc-187dd6a7-20240806",
+    "react-dom": "19.0.0-rc-187dd6a7-20240806",
     "server-only": "^0.0.1",
     "zod": "^3.23.8"
   },
@@ -32,7 +30,7 @@
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.24.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.0.0-canary.111",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
